# cosmic-synapse-A-lmi-v.2

./: Harmonic_Resonance_AI_Music_Conductor_Complete_Publication.md  QUICK_START.md  README.md  SYSTEM_READY.md  TESTING.md  ULTIMATE_AI_Band_Conductor_v4_Complete.html  UNITY_PROJECT_COMPLETE.md  cosmic_synapse_complete.py  cosmic_synapse_complete_hybrid (1).html  cosmic_tokens_continuous_1762139282205.json  main.py  requirements.txt  🎉_100_PERCENT_COMPLETE.md  🚀_START_HERE.md
a_lmi/: __init__.py
coms/: BUILD_COMPLETE.md  LICENSE  README.md  (+4 more)
coms/hrcs/: DEPLOYMENT_OPTIONS.md  FINAL_STATUS.md  FINAL_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  PHONE_DEPLOYMENT.md  TEST_RESULTS.md  VERIFICATION.md  VERIFICATION_COMPLETE.md  offline_html_mode.html  phone_offline_agent.html  pyproject.toml  setup.py  test_phone_agent.py  test_phone_comprehensive.py  test_simple.py
coms/hrcs/config/: config.yaml.example
coms/hrcs/docs/: api.md  deployment.md  hardware.md  theory.md
coms/hrcs/scripts/: generate_key.py  install.sh  setup_node.py
coms/hrcs/simulator/: __init__.py  network_sim.py
coms/hrcs/src/: __init__.py
coms/hrcs/src/hrcs/: __init__.py  node.py
coms/hrcs/src/hrcs/application/: __init__.py  cli.py  messaging.py  voice.py
coms/hrcs/src/hrcs/core/: __init__.py  crypto.py  math.py  packet.py
coms/hrcs/src/hrcs/network/: __init__.py  discovery.py  mesh.py  routing.py
coms/hrcs/src/hrcs/physical/: __init__.py  acoustic.py  base.py  radio.py  spectrum.py
coms/hrcs/tests/: __init__.py  test_crypto.py  test_math.py  test_modem.py  test_packet.py  test_routing.py
(+178 files in other folders)
