[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrcs"
version = "1.0.0"
description = "Harmonic Resonance Communication System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT + Emergency Use"}
authors = [
    {name = "Cory Shane Davis"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "sounddevice>=0.4.4",
    "cryptography>=3.4.8",
    "pyyaml>=5.4.1",
    "click>=8.0.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.00",
]

[project.scripts]
hrcs = "hrcs.application.cli:cli"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=hrcs --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

